customize the init

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
 env:
   FORCE_COLOR: 3
   TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
-  TURBO_TEAM: acme
+  TURBO_TEAM: dallah
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
