--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "microfrontends",
-  "repository": "https://github.com/vercel/examples.git",
+  "name": "dallah",
+  "repository": "https://github.com/mahmoudgalalz/dallah.git",
   "license": "MIT",
   "private": true,
   "workspaces": [
@@ -22,10 +22,10 @@
     "version-packages": "changeset version"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.27.8",
+    "@changesets/cli": "^2.27.10",
     "@types/node": "20.11.30",
     "prettier": "3.2.5",
-    "turbo": "^2.2.3"
+    "turbo": "^2.3.3"
   },
   "packageManager": "pnpm@9.4.0",
   "engines": {
