--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
     "release": "turbo run build --filter=main... && changeset publish",
     "type-check": "turbo run type-check",
     "start": "turbo run start",
-    "version-packages": "changeset version"
+    "version-packages": "changeset version",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@changesets/cli": "^2.27.10",
+    "@commitlint/cli": "^19.6.0",
+    "@commitlint/config-conventional": "^19.6.0",
     "@types/node": "20.11.30",
+    "eslint": "9.15.0",
+    "husky": "^9.1.7",
     "prettier": "3.2.5",
     "turbo": "^2.3.3"
   },
