--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -3,6 +3,7 @@
   "repository": "https://github.com/mahmoudgalalz/dallah.git",
   "license": "MIT",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "next build",
     "clean": "rm -rf .next && rm -rf .turbo",
@@ -22,11 +23,11 @@
   "devDependencies": {
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-    "autoprefixer": "^10.4.12",
-    "eslint": "^8.11.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.16.0",
     "eslint-config-dallah": "workspace:*",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.1",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "typescript": "5.1.3"
   },
   "engines": {
