--- a/apps/platform/package.json
+++ b/apps/platform/package.json
@@ -3,6 +3,7 @@
   "repository": "https://github.com/mahmoudgalalz/dallah.git",
   "license": "MIT",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "next build",
     "clean": "rm -rf .next && rm -rf .turbo",
@@ -23,7 +24,7 @@
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "autoprefixer": "^10.4.12",
-    "eslint": "^8.11.0",
+    "eslint": "^9.16.0",
     "eslint-config-dallah": "workspace:*",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1",
