--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.6.0",
     "@types/node": "20.11.30",
-    "eslint": "9.15.0",
+    "eslint": "9.16.0",
     "husky": "^9.1.7",
     "prettier": "3.2.5",
     "turbo": "^2.3.3"
@@ -36,5 +36,8 @@
   "engines": {
     "node": "20.x",
     "pnpm": "9.4.0"
+  },
+  "dependencies": {
+    "@next/eslint-plugin-next": "^15.0.3"
   }
 }
