--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@changesets/cli": "^2.27.10",
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.6.0",
+    "@eslint/compat": "^1.2.3",
+    "@eslint/js": "^9.16.0",
     "@types/node": "20.11.30",
     "eslint": "9.16.0",
     "husky": "^9.1.7",
