--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@eslint/js": "^9.16.0",
     "@types/node": "20.11.30",
     "eslint": "9.16.0",
+    "eslint-plugin-tailwindcss": "^3.17.5",
     "husky": "^9.1.7",
     "prettier": "3.2.5",
     "turbo": "^2.3.3"
