--- a/packages/dallah-storybook/package.json
+++ b/packages/dallah-storybook/package.json
@@ -4,6 +4,7 @@
   "repository": "https://github.com/mahmoudgalalz/dallah.git",
   "license": "MIT",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "storybook dev -p 6006 --no-open",
     "build": "storybook build",
