--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-tailwindcss": "^3.17.5",
     "husky": "^9.1.7",
     "prettier": "3.2.5",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "turbo": "^2.3.3"
   },
   "packageManager": "pnpm@9.4.0",
