--- a/package.json
+++ b/package.json
@@ -26,15 +26,22 @@
     "@changesets/cli": "^2.27.10",
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.6.0",
+    "@eslint/compat": "^1.2.3",
+    "@eslint/js": "^9.16.0",
     "@types/node": "20.11.30",
-    "eslint": "9.15.0",
+    "eslint": "9.16.0",
+    "eslint-plugin-tailwindcss": "^3.17.5",
     "husky": "^9.1.7",
     "prettier": "3.2.5",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "turbo": "^2.3.3"
   },
   "packageManager": "pnpm@9.4.0",
   "engines": {
     "node": "20.x",
     "pnpm": "9.4.0"
+  },
+  "dependencies": {
+    "@next/eslint-plugin-next": "^15.0.3"
   }
 }
