--- a/apps/platform/package.json
+++ b/apps/platform/package.json
@@ -17,8 +17,8 @@
     "@dallah/design-system": "workspace:*",
     "@dallah/utils": "workspace:*",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@types/react": "npm:types-react@19.0.0-rc.1",
