--- a/packages/dallah-design-system/package.json
+++ b/packages/dallah-design-system/package.json
@@ -57,7 +57,9 @@
     "react-dom": "^18.0.0-0"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.1",
     "@swc/helpers": "^0.5.1",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^1.2.1"
   },
   "devDependencies": {
