--- a/packages/dallah-storybook/package.json
+++ b/packages/dallah-storybook/package.json
@@ -17,19 +17,20 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-docs": "^7.0.6",
-    "@storybook/addon-essentials": "^7.0.6",
-    "@storybook/addon-links": "^7.0.6",
-    "@storybook/addon-styling": "^1.0.1",
-    "@storybook/react": "^7.0.6",
-    "@storybook/react-vite": "^7.0.6",
+    "@chromatic-com/storybook": "^3",
+    "@storybook/addon-docs": "^8.4.7",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-links": "^8.4.7",
+    "@storybook/addon-styling": "^1.3.7",
+    "@storybook/react": "^8.4.7",
+    "@storybook/react-vite": "^8.4.7",
     "autoprefixer": "^10.4.14",
     "eslint": "^9.16.0",
     "eslint-config-dallah": "workspace:*",
-    "eslint-plugin-storybook": "^0.6.11",
+    "eslint-plugin-storybook": "^0.11.1",
     "postcss": "^8.4.23",
     "serve": "^14.2.0",
-    "storybook": "^7.0.6",
+    "storybook": "^8.4.7",
     "tailwindcss": "^3.3.1",
     "typescript": "^5.0.4",
     "vite": "^4.3.1"
