feat(storybook): get storybook to work

--- a/apps/platform/package.json
+++ b/apps/platform/package.json
@@ -18,7 +18,8 @@
     "@dallah/utils": "workspace:*",
     "next": "15.0.3",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-lottie-player": "^2.1.0"
   },
   "devDependencies": {
     "@types/react": "npm:types-react@19.0.0-rc.1",
