--- a/packages/dallah-storybook/package.json
+++ b/packages/dallah-storybook/package.json
@@ -13,8 +13,8 @@
   },
   "dependencies": {
     "@dallah/design-system": "workspace:*",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
@@ -26,6 +26,7 @@
     "@storybook/react": "^8.4.7",
     "@storybook/react-vite": "^8.4.7",
     "@storybook/react-webpack5": "^8.4.7",
+    "@types/react": "19.0.1",
     "autoprefixer": "^10.4.14",
     "eslint": "^9.16.0",
     "eslint-config-dallah": "workspace:*",
