feat(storybook): implement switch, swipe btns and their stories

--- a/packages/dallah-design-system/tsconfig.json
+++ b/packages/dallah-design-system/tsconfig.json
@@ -17,7 +17,8 @@
     "incremental": true,
     "jsx": "react-jsx",
     "paths": {
-      "@dallah/utils": ["../dallah-utils/src/"]
+      "@dallah/utils": ["../dallah-utils/src/"],
+      "@/*": ["./*"]
     }
   },
   "include": ["src"],
