--- a/packages/dallah-design-system/package.json
+++ b/packages/dallah-design-system/package.json
@@ -58,9 +58,12 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
     "@swc/helpers": "^0.5.15",
+    "@use-gesture/react": "^10.3.1",
     "class-variance-authority": "^0.7.1",
-    "clsx": "^1.2.1"
+    "clsx": "^1.2.1",
+    "framer-motion": "^11.15.0"
   },
   "devDependencies": {
     "@storybook/react": "^7.6.20",
