feat(all): add utils package in design sys package

--- a/packages/dallah-design-system/tsconfig.json
+++ b/packages/dallah-design-system/tsconfig.json
@@ -16,10 +16,7 @@
     "isolatedModules": true,
     "incremental": true,
     "jsx": "react-jsx",
-    "paths": {
-      "@dallah/utils": ["../dallah-utils/src/"],
-      "@/*": ["./*"]
-    }
+    "baseUrl": "./"
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/*.stories.tsx"]
