--- a/packages/dallah-design-system/package.json
+++ b/packages/dallah-design-system/package.json
@@ -66,7 +66,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^1.2.1",
     "framer-motion": "^11.15.0",
-    "lucide-react": "^0.468.0"
+    "lucide-react": "^0.468.0",
+    "@dallah/utils": "workspace:*"
   },
   "devDependencies": {
     "@storybook/react": "^7.6.20",
