--- a/packages/dallah-design-system/package.json
+++ b/packages/dallah-design-system/package.json
@@ -5,12 +5,12 @@
   "license": "MIT",
   "scripts": {
     "dev": "pnpm build:swc -w",
-    "build": "rm -rf dist && pnpm build:swc && pnpm types",
+    "build": "pnpm build:swc && pnpm types",
     "build:swc": "pnpm copy-tailwind && swc src -d dist",
-    "copy-tailwind": "mkdir -p dist && cp src/tailwind.cjs dist/tailwind.cjs",
+    "copy-tailwind": "shx mkdir -p dist && shx cp src/tokens.js dist/tokens.js",
     "types": "tsc --emitDeclarationOnly",
-    "lint": "TIMING=1 eslint \"**/*.{ts,tsx,js,jsx}\" --fix",
-    "clean": "rm -rf ./dist && rm -rf .turbo"
+    "lint": "cross-env TIMING=1 eslint \"**/*.{ts,tsx,js,jsx}\" --fix",
+    "clean": "shx rm -rf ./dist && shx rm -rf .turbo"
   },
   "sideEffects": false,
   "type": "module",
@@ -70,6 +70,7 @@
     "chokidar": "^3.5.3",
     "eslint": "^9.16.0",
     "eslint-config-dallah": "workspace:*",
+    "shx": "^0.3.4",
     "typescript": "5.0.4"
   }
 }
