--- a/packages/dallah-components/package.json
+++ b/packages/dallah-components/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "clean": "rm -rf ./dist && rm -rf .turbo",
-    "lint": "TIMING=1 eslint \"**/*.{ts,tsx,js,jsx}\" --fix",
+    "lint": "cross-env TIMING=1 eslint \"**/*.{ts,tsx,js,jsx}\" --fix",
     "type-check": "tsc --noEmit"
   },
   "peerDependencies": {
