--- a/apps/platform/package.json
+++ b/apps/platform/package.json
@@ -15,6 +15,7 @@
     "@dallah/components": "workspace:*",
     "@dallah/design-system": "workspace:*",
     "@dallah/utils": "workspace:*",
+    "lucide-react": "^0.468.0",
     "motion": "^11.15.0",
     "next": "15.0.3",
     "react": "19.0.0",
