feat(platform): wip rates in boxes

--- a/apps/platform/package.json
+++ b/apps/platform/package.json
@@ -20,7 +20,8 @@
     "next": "15.0.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-lottie-player": "^2.1.0"
+    "react-lottie-player": "^2.1.0",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@types/react": "npm:types-react@19.0.0-rc.1",
