--- a/apps/platform/package.json
+++ b/apps/platform/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.468.0",
     "motion": "^11.15.0",
     "next": "15.0.3",
+    "nuqs": "^2.2.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-lottie-player": "^2.1.0",
