--- a/packages/dallah-design-system/package.json
+++ b/packages/dallah-design-system/package.json
@@ -59,6 +59,7 @@
   "dependencies": {
     "@dallah/utils": "workspace:*",
     "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.3",
     "@radix-ui/react-radio-group": "^1.2.2",
