--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
   },
   "dependencies": {
     "@fontsource-variable/sora": "^5.1.0",
-    "@next/eslint-plugin-next": "^15.0.3"
+    "@hookform/resolvers": "^3.9.1",
+    "@next/eslint-plugin-next": "^15.0.3",
+    "react-hook-form": "^7.54.2",
+    "zod": "^3.24.1"
   }
 }
