--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@fontsource-variable/sora": "^5.1.0",
     "@hookform/resolvers": "^3.9.1",
     "@next/eslint-plugin-next": "^15.0.3",
+    "next-view-transitions": "^0.3.4",
     "react-hook-form": "^7.54.2",
     "zod": "^3.24.1"
   }
