--- a/apps/platform/package.json
+++ b/apps/platform/package.json
@@ -15,6 +15,7 @@
     "@dallah/components": "workspace:*",
     "@dallah/design-system": "workspace:*",
     "@dallah/utils": "workspace:*",
+    "input-otp": "^1.4.1",
     "lucide-react": "^0.468.0",
     "next": "15.0.3",
     "nuqs": "^2.2.3",
