--- a/apps/platform/package.json
+++ b/apps/platform/package.json
@@ -3,6 +3,7 @@
   "repository": "https://github.com/mahmoudgalalz/dallah.git",
   "license": "MIT",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "next build",
     "clean": "rm -rf .next && rm -rf .turbo",
@@ -35,7 +36,7 @@
     "typescript": "5.1.3"
   },
   "engines": {
-    "node": "20.x"
+    "node": "22.x"
   },
   "pnpm": {
     "overrides": {
