--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
   },
   "packageManager": "pnpm@9.4.0",
   "engines": {
-    "node": "20.x",
-    "pnpm": "9.4.0"
+    "node": "22.x",
+    "pnpm": "^9.4.0"
   },
   "dependencies": {
     "@fontsource-variable/sora": "^5.1.0",
