--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "pnpm": "^9.4.0"
   },
   "dependencies": {
+    "@fontsource-variable/montserrat": "^5.1.1",
     "@fontsource-variable/sora": "^5.1.0",
     "@next/eslint-plugin-next": "^15.0.3"
   }
