--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "pnpm": "^9.4.0"
   },
   "dependencies": {
+    "@fontsource-variable/inter": "^5.1.1",
     "@fontsource-variable/sora": "^5.1.0",
     "@hookform/resolvers": "^3.9.1",
     "@next/eslint-plugin-next": "^15.0.3",
