--- a/packages/dallah-design-system/package.json
+++ b/packages/dallah-design-system/package.json
@@ -69,6 +69,7 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@swc/helpers": "^0.5.15",
     "@use-gesture/react": "^10.3.1",
     "class-variance-authority": "^0.7.1",
